Fix typo advanatge -> advantage (#111)

--- a/src/pages/_partials/_steps/_try-flow.mdx
+++ b/src/pages/_partials/_steps/_try-flow.mdx
@@ -1,7 +1,7 @@
 If you do not use GDB, skip ahead to the next step.
 
 If you use GDB, a full coredump can be captured by just using the debugger! This
-can be useful during development to take advanatge of Memfault's analyzers when
+can be useful during development to take advantage of Memfault's analyzers when
 a device crashes or hangs.
 
 ![](/binary-assets/embedded/try-flow.png)
