--- a/docs/platform/fleet-wide-metrics.mdx
+++ b/docs/platform/fleet-wide-metrics.mdx
@@ -31,3 +31,24 @@ For more information about adding metrics to your devices:
 - Bare Metal/RTOS: see the [Metrics Guide](https://mflt.io/embedded-metrics)
 - Android: update to the 3.0+ version of the
   [Bort SDK](https://mflt.io/android-bort-sdk)
+
+## Filtering Metric Charts
+
+You can filter the values visible in the charts by selecting from the available
+filters on the top-right area of the page:
+
+![](/binary-assets/fleet-wide-metrics-filter.png)
+
+## Metric Chart Comparison Mode
+
+To compare the values of different sets of Devices, you can click the `Compare`
+button next to the filters section on the top-right area of the page to add a
+new colorized selection to the filters as well as the charts:
+
+![](/binary-assets/fleet-wide-metrics-compare.png)
+
+When comparing Metric Charts, bear in mind that the aggregations `Count` and
+`Sum` lead to absolute values that are a function of the number of Devices
+reporting the given value. When visualizing absolute values for different sets
+of Devices, the resulting chart could be misleading as the underlying number of
+Devices per set may vary.
