Shrink and center some images (#115)
We should probably use the HTML img tag as the default so that we can
more easily adjust the width and center images. I've taken the liberty to 
convert a few that should be centered and shrunken.

--- a/docs/android/android-reboot-events.mdx
+++ b/docs/android/android-reboot-events.mdx
@@ -32,4 +32,6 @@ A chart of the reboot events for devices in a given project can be found by
 navigating to **Dashboards** and **Overview**. Below is a sample of what reboot
 reasons may look like on a small fleet of test devices:
 
-![](/binary-assets/android-reboot-reasons-example.png)
+<p align="center">
+  <img src="/binary-assets/android-reboot-reasons-example.png" />
+</p>
