--- a/docs/mcu/arm-gcc-guide.mdx
+++ b/docs/mcu/arm-gcc-guide.mdx
@@ -29,7 +29,13 @@ types of data which can be collected by the SDK (such as coredumps and metrics).
 Here's an example where Trace Events are captured for Bluetooth protocol CRC
 errors and invalid message IDs:
 
-![](/img/docs/mcu/trace-reason-example.png)
+<p align="center">
+  <img
+    width="800"
+    src="/img/docs/mcu/trace-reason-example.png"
+    alt="/img/docs/mcu/trace-reason-example.png"
+  />
+</p>
 
 ### Clone Memfault SDK
 
