--- a/docs/mcu/coredump-elf-with-gdb.mdx
+++ b/docs/mcu/coredump-elf-with-gdb.mdx
@@ -31,7 +31,12 @@ most likely means that the trace was not a coredump trace.
 
 Click "Coredump .elf" to export and download the coredump to an ELF core file:
 
-![](/img/docs/mcu/download-coredump-elf.png)
+<p align="center">
+  <img
+    src="/img/docs/mcu/download-coredump-elf.png"
+    alt="/img/docs/mcu/download-coredump-elf.png"
+  />
+</p>
 
 ## Download the symbol ELF file
 
