--- a/docs/mcu/nrf-connect-sdk-guide.mdx
+++ b/docs/mcu/nrf-connect-sdk-guide.mdx
@@ -32,15 +32,33 @@ your system!
 
 - [Reboot Reason Tracking](/docs/mcu/reboot-reason-tracking)
 
-![](/img/docs/mcu/reboot-reason-chart.png)
+<p align="center">
+  <img
+    width="800"
+    src="/img/docs/mcu/reboot-reason-chart.png"
+    alt="/img/docs/mcu/reboot-reason-chart.png"
+  />
+</p>
 
 - [Error Tracking with Trace Events](/docs/mcu/trace-events)
 
-![](/img/docs/mcu/trace-reason-example.png)
+<p align="center">
+  <img
+    width="800"
+    src="/img/docs/mcu/trace-reason-example.png"
+    alt="/img/docs/mcu/trace-reason-example.png"
+  />
+</p>
 
 - [RAM-backed stack dump Collection](/docs/mcu/coredumps)
 
-![](/img/docs/mcu/logs-with-coredump.png)
+<p align="center">
+  <img
+    width="800"
+    src="/img/docs/mcu/logs-with-coredump.png"
+    alt="/img/docs/mcu/logs-with-coredump.png"
+  />
+</p>
 
 ## Integration Steps
 
