--- a/docs/mcu/trace-events.mdx
+++ b/docs/mcu/trace-events.mdx
@@ -23,7 +23,13 @@ associated with an Issue just like a coredump.
 Here's an example where Trace Events are captured for Bluetooth protocol CRC
 errors and invalid message IDs:
 
-![](/img/docs/mcu/trace-reason-example.png)
+<p align="center">
+  <img
+    width="800"
+    src="/img/docs/mcu/trace-reason-example.png"
+    alt="/img/docs/mcu/trace-reason-example.png"
+  />
+</p>
 
 <IntegrationCompletePrerequisite />
 
