--- a/docs/platform/alerts.mdx
+++ b/docs/platform/alerts.mdx
@@ -23,7 +23,13 @@ for devices with serial numbers starting with **MFLT.**
 - To do this we click **Add**, and specify these values. To add multiple
   filters, click **Add** and repeat the process
 
-![/img/docs/platform/alerts-edit.png](/img/docs/platform/alerts-edit.png)
+<p align="center">
+  <img
+    width="500"
+    src="/img/docs/platform/alerts-edit.png"
+    alt="/img/docs/platform/alerts-edit.png"
+  />
+</p>
 
 - Above, we have created our Alert! Click **OK**
 
@@ -33,7 +39,13 @@ Once the Alert is set up, Memfault will watch for Events matching the criteria
 specified. If it finds any, it will create Incidents, which can be found by
 clicking on the Alert entry in the Alerts table.
 
-![/img/docs/platform/alerts-incidents.png](/img/docs/platform/alerts-incidents.png)
+<p align="center">
+  <img
+    width="600"
+    src="/img/docs/platform/alerts-incidents.png"
+    alt="/img/docs/platform/alerts-incidents.png"
+  />
+</p>
 
 On top of the entries in this view, Memfault will send an email every **5
 minutes** summarizing the number of devices that meet this threshold. Given this
