--- a/docs/platform/device-attributes.mdx
+++ b/docs/platform/device-attributes.mdx
@@ -85,14 +85,24 @@ Visit the respective device page as described in
 [Viewing an Attribute](#viewing-an-attribute). Click on the _pencil icon_ next
 to the value, enter the new value, and finally **Save** it.
 
-![Example of editing an attribute via the web application](/img/blog/2021-08-17-device-properties-edit.png)
+<p align="center">
+  <img
+    src="/img/blog/2021-08-17-device-properties-edit.png"
+    alt="Example of editing an attribute via the web application"
+  />
+</p>
 
 ## Searching by Attribute
 
 You can search devices by attributes. Visiting the **Devices** page, open the
 **Filter** panel and select the **Custom Metric** you want to search by.
 
-![Example of filtering by an attribute](/img/blog/2021-08-17-device-properties-filter.png)
+<p align="center">
+  <img
+    src="/img/blog/2021-08-17-device-properties-filter.png"
+    alt="Example of filtering by an attribute"
+  />
+</p>
 
 You can search by multiple attributes using the _plus icon_.
 
