--- a/docs/platform/fleet-wide-metrics.mdx
+++ b/docs/platform/fleet-wide-metrics.mdx
@@ -11,12 +11,16 @@ the emergent behavior of your entire fleet.
 You can add charts to visualize these aggregated, fleet-wide metrics by
 navigating to the sidebar and selecting **Dashboards** and then **Metrics**.
 
-![](/binary-assets/fleet-wide-metrics-sidebar.png)
-
 Creating a new chart is as simple as clicking `Create Chart`, selecting your
 metric of interest, and choosing the desired aggregation type.
 
-![](/binary-assets/fleet-wide-metrics-create-chart.gif)
+<p align="center">
+  <img
+    width="800"
+    src="/binary-assets/fleet-wide-metrics-create-chart.gif"
+    alt="/binary-assets/fleet-wide-metrics-create-chart.gif"
+  />
+</p>
 
 The list of metrics available in your project is automatically created from the
 metrics collected by your devices. For that reason, at least one device must
