--- a/docs/platform/issue-management.mdx
+++ b/docs/platform/issue-management.mdx
@@ -33,7 +33,12 @@ title to navigate to the Issue detail page.
 
 Below the title of the Issue, you will find a button to change the state:
 
-![](/img/docs/platform/issue-mgmt-resolving-ui.gif)
+<p align="center">
+  <img
+    src="/img/docs/platform/issue-mgmt-resolving-ui.gif"
+    alt="/img/docs/platform/issue-mgmt-resolving-ui.gif"
+  />
+</p>
 
 When the Issue is Unresolved, the button will say "Resolve" and clicking it will
 change the state to Resolved.
