--- a/docs/platform/organization-auth-tokens.mdx
+++ b/docs/platform/organization-auth-tokens.mdx
@@ -14,7 +14,13 @@ Keys will not work.
 
 :::
 
-![](/binary-assets/organization-auth-token-list.png)
+<p align="center">
+  <img
+    width="800"
+    src="/binary-assets/organization-auth-token-list.png"
+    alt="/binary-assets/organization-auth-token-list.png"
+  />
+</p>
 
 ### Creation
 
@@ -22,7 +28,12 @@ Administrators can create new tokens via the **Create Token** button. They will
 be prompted to enter an optional description. After that, they are shown the
 token and should store it somewhere safe.
 
-![](/binary-assets/organization-auth-token-new.png)
+<p align="center">
+  <img
+    src="/binary-assets/organization-auth-token-new.png"
+    alt="/binary-assets/organization-auth-token-new.png"
+  />
+</p>
 
 ### Deletion
 
