--- a/docs/mcu/esp8266-rtos-sdk-guide.mdx
+++ b/docs/mcu/esp8266-rtos-sdk-guide.mdx
@@ -19,19 +19,43 @@ your system!
 
 - [Reboot Reason Tracking](/docs/mcu/reboot-reason-tracking)
 
-![](/img/docs/mcu/reboot-reason-chart.png)
+<p align="center">
+  <img
+    width="800"
+    src="/img/docs/mcu/reboot-reason-chart.png"
+    alt="/img/docs/mcu/reboot-reason-chart.png"
+  />
+</p>
 
 - [Error Tracking with Trace Events](/docs/mcu/trace-events)
 
-![](/img/docs/mcu/trace-reason-example.png)
+<p align="center">
+  <img
+    width="800"
+    src="/img/docs/mcu/trace-reason-example.png"
+    alt="/img/docs/mcu/trace-reason-example.png"
+  />
+</p>
 
 - [Flash-backed Coredump Collection](/docs/mcu/coredumps)
 
-![](/img/docs/mcu/logs-with-coredump.png)
+<p align="center">
+  <img
+    width="800"
+    src="/img/docs/mcu/logs-with-coredump.png"
+    alt="/img/docs/mcu/logs-with-coredump.png"
+  />
+</p>
 
 - [Device Metrics](/docs/mcu/metrics-api)
 
-![](/img/docs/mcu/metrics-api.png)
+<p align="center">
+  <img
+    width="800"
+    src="/img/docs/mcu/metrics-api.png"
+    alt="/img/docs/mcu/metrics-api.png"
+  />
+</p>
 
 ## Integration Steps
 
