--- a/src/pages/_partials/_integration-guide-table.mdx
+++ b/src/pages/_partials/_integration-guide-table.mdx
@@ -6,5 +6,6 @@
 | nRF Connect SDK  | [nRF Connect SDK Integration Guide](/docs/mcu/nrf-connect-sdk-guide) |
 | ESP32 ESP-IDF    |       [ESP32 ESP-IDF Integration Guide](/docs/mcu/esp32-guide)       |
 | ESP8266          |  [ESP8266 RTOS Integration Guide](/docs/mcu/esp8266-rtos-sdk-guide)  |
+| Dialog DA1469x   |       [DA1469x Integration Guide](/docs/mcu/da1469x-sdk-guide)       |
 
 </center>
