Fix typo "invokes invokes" (#123)
Thanks to Jon for reporting it.

--- a/docs/android/android-bort.mdx
+++ b/docs/android/android-bort.mdx
@@ -104,7 +104,7 @@ For a summary of _Caliper_'s features, see
 ### Bug Reports via _MemfaultDumpstateRunner_
 
 When a [bug report](https://developer.android.com/studio/debug/bug-report) is
-requested by the _Bort_ app, the _UsageReporter_ app invokes invokes the
+requested by the _Bort_ app, the _UsageReporter_ app invokes the
 `MemfaultDumpstateRunner` to capture the bug report.
 
 #### /system/bin/MemfaultDumpstateRunner
