MFLT-3866 split out MQTT guide (#121)
Pull the MQTT guide out from the Laird guide, add it to a separate doc
and embed the content in the Laird guide.

--- a/docs/mcu/pinnacle-100-guide.mdx
+++ b/docs/mcu/pinnacle-100-guide.mdx
@@ -4,8 +4,8 @@ title: Pinnacle™ 100 Modem Integration Guide
 sidebar_label: Laird Pinnacle™ 100
 ---
 
-import ProjectAwareTabs from "@site/src/components/ProjectAwareTabs";
-import TabItem from "@theme/TabItem";
+import MqttTopic from "@site/src/pages/_partials/_mqtt/_topic.mdx";
+import MqttAws from "@site/src/pages/_partials/_mqtt/_aws.mdx";
 
 In this guide we will walk through the steps for integrating the
 [Memfault Firmware SDK](https://github.com/memfault/memfault-firmware-sdk) into
@@ -72,228 +72,6 @@ connectivity issues with AWS IoT.
 After a connection with AWS IoT is established, Memfault data is published to
 the following topic.
 
-```
-prod/<board>/<device_id>/memfault/<memfault_project_key>/chunk
-```
+<MqttTopic />
 
-Forwarding data to Memfault from AWS IoT is very easy! You just need to
-configure an AWS IoT Rule for the topic and connect it to an AWS Lambda
-function. This can either be done manually in the AWS console or
-programmatically using CloudFormation.
-
-<ProjectAwareTabs
-  defaultValueFn={details => "cloudformation" }
-  values={[
-    { label: "CloudFormation", value: "cloudformation" },
-    { label: "Manually", value: "manually" },
-  ]}
->
-
-<TabItem value="cloudformation">
-
-:::caution
-
-These steps assume you have installed the
-[AWS CLI](https://docs.aws.amazon.com/cli/latest/userguide/install-cliv2.html)
-and have set up credentials to access your AWS instance.
-
-:::
-
-1. Copy and paste the contents below into `cfnTemplate_memfault.yml`
-2. Deploy the configuration
-
-```bash
-$ aws cloudformation deploy --template cfnTemplate_memfault.yml --stack-name memfault-pinnacle-100-chunk-proxy --capabilities CAPABILITY_NAMED_IAM
-
-Waiting for changeset to be created..
-Waiting for stack create/update to complete
-
-```
-
-#### cfnTemplate_memfault.yml file contents
-
-```yml
-AWSTemplateFormatVersion: "2010-09-09"
-Transform: AWS::Serverless-2016-10-31
-Description: Memfault Pinnacle 100 Chunk Proxy
-Parameters:
-  ApplicationName:
-    Type: String
-    Default: memfault-chunk-proxy
-
-Resources:
-  LambdaIotRole:
-    Type: AWS::IAM::Role
-    Properties:
-      RoleName: !Sub ${ApplicationName}-lambda-iot-role
-      AssumeRolePolicyDocument:
-        Version: 2012-10-17
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service:
-                - lambda.amazonaws.com
-            Action:
-              - sts:AssumeRole
-      Path: !Sub /${ApplicationName}/
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/AWSIoTFullAccess
-      Policies:
-        - PolicyName: LambdaIotPolicy
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Effect: Allow
-                Action:
-                  - logs:CreateLogStream
-                  - logs:PutLogEvents
-                Resource:
-                  - arn:aws:logs:*:*:log-group:/aws/lambda/*
-
-  #
-  # Proxy Memfault "chunks" to Memfault cloud for processing
-  # For more details about data transport see https://mflt.io/data-to-cloud
-  #
-  MemfaultProxyFunction:
-    Type: AWS::Lambda::Function
-    Properties:
-      FunctionName: "MemfaultPinnacle100ProxyFunction"
-      Code:
-        ZipFile: |
-          const https = require('https')
-          exports.https = https
-
-          exports.handler = (event, context, callback) => {
-            const data = Buffer.from(event.data, 'base64');
-            // Topic Format: prod/<board>/<device_id>/memfault/<memfault_project_key>/chunk
-            const topicParams = event.topic.split('/')
-            const deviceSerial = topicParams[2]
-
-            const options = {
-              hostname: 'chunks.memfault.com',
-              port: 443,
-              path: `/api/v0/chunks/${deviceSerial}`,
-              method: 'POST',
-              headers: {
-                'Content-Type': 'application/octet-stream',
-                'Content-Length': data.length,
-                'Memfault-Project-Key': topicParams[4]
-              }
-            }
-
-            const req = https.request(options, res => {
-              const response = {
-                statusCode: res.statusCode
-              };
-              callback(null, response);
-            })
-
-            req.on('error', error => {
-              console.error(error)
-            })
-
-            req.write(data)
-            req.end()
-          }
-      Handler: "index.handler"
-      Role: !GetAtt LambdaIotRole.Arn
-      Runtime: nodejs12.x
-      Timeout: 15
-      Environment:
-        Variables:
-          ApplicationName: !Ref ApplicationName
-
-  MemfaultProxyFunctionLogGroup:
-    Type: AWS::Logs::LogGroup
-    DependsOn: MemfaultProxyFunction
-    Properties:
-      RetentionInDays: 14
-      LogGroupName: !Join ["", ["/aws/lambda/", !Ref MemfaultProxyFunction]]
-
-  MemfaultProxyFunctionPermission:
-    Type: AWS::Lambda::Permission
-    Properties:
-      Action: lambda:InvokeFunction
-      FunctionName: !GetAtt
-        - MemfaultProxyFunction
-        - Arn
-      Principal: iot.amazonaws.com
-      SourceArn: !Sub arn:aws:iot:${AWS::Region}:${AWS::AccountId}:rule/${MemfaultProxyRule}
-
-  MemfaultProxyRule:
-    Type: AWS::IoT::TopicRule
-    Properties:
-      RuleName: "MemfaultPinnacle100ProxyRule"
-      TopicRulePayload:
-        AwsIotSqlVersion: "2016-03-23"
-        RuleDisabled: false
-        Sql:
-          !Sub SELECT encode(*, 'base64') AS data, topic() AS topic FROM
-          'prod/+/+/memfault/#'
-        Actions:
-          - Lambda:
-              FunctionArn: !GetAtt MemfaultProxyFunction.Arn
-```
-
- </TabItem>
-  <TabItem value="manually">
-
-#### Create AWS Lambda
-
-First you will need to create an
-[AWS Lambda](https://console.aws.amazon.com/lambda/home#/functions) to forward
-data to Memfault
-
-```js
-const https = require("https");
-exports.https = https;
-
-exports.handler = (event, context, callback) => {
-  const data = Buffer.from(event.data, "base64");
-  // Topic Format: prod/<board>/<device_id>/memfault/<memfault_project_key>/chunk
-  const topicParams = event.topic.split("/");
-  const deviceSerial = topicParams[2];
-
-  const options = {
-    hostname: "chunks.memfault.com",
-    port: 443,
-    path: `/api/v0/chunks/${deviceSerial}`,
-    method: "POST",
-    headers: {
-      "Content-Type": "application/octet-stream",
-      "Content-Length": data.length,
-      "Memfault-Project-Key": topicParams[4],
-    },
-  };
-
-  const req = https.request(options, (res) => {
-    const response = {
-      statusCode: res.statusCode,
-    };
-    callback(null, response);
-  });
-
-  req.on("error", (error) => {
-    console.error(error);
-  });
-
-  req.write(data);
-  req.end();
-};
-```
-
-#### Create AWS IoT Rule
-
-Next you will need to create a new
-[AWS IoT Rule](https://console.aws.amazon.com/iot/home#/rulehub):
-
-```
-SELECT encode(*, 'base64') AS data, topic() AS topic FROM 'prod/+/+/memfault/#'
-```
-
-Finally, as part of the setup you will need to attach the Lambda you just
-created to the AWS IoT rule so that the lambda gets triggered each time new data
-arrives.
-
-   </TabItem>
-   </ProjectAwareTabs>
+<MqttAws />
