Update SSO docs

--- a/docs/platform/sso.mdx
+++ b/docs/platform/sso.mdx
@@ -20,8 +20,9 @@ support automatic or autonomous provisioning of SSO for organizations.
 
 Supported providers include:
 
+- Google OAuth
+- Microsoft OAuth
 - Okta
-- Google
 - Azure AD
 - Microsoft AD FS
 - OneLogin
@@ -51,31 +52,13 @@ members with a `@your-domain.com` email address,
 
 ### Logging Into the App
 
-We have different methods depending on your authentication provider.
-
-<p align="center">
-  <img
-    width="400"
-    src="/img/docs/platform/login-form-with-sso.png"
-    alt="Memfault's log in form with SSO"
-  />
-</p>
-
-#### Google
-
-To log in with Google, simply click on the **Log in with Google** button. Make
-sure you choose the account belonging to your organization, and you'll be
-redirected back to the app automatically.
-
-#### Other Providers & SAML
-
-To log in with other providers and SAML, click on the **Log in with SAML SSO**
+To log in with SSO, click on the **Log in with SAML SSO**
 link, and you'll be prompted to enter your email address. Make sure to enter the
 email address provided by your organization.
 
 <p align="center">
   <img
-    width="400"
+    width="800"
     src="/img/docs/platform/login-with-saml-form.png"
     alt="Memfault's log in form for SAML SSO"
   />
