Prettify sso.mdx (#128)
Lint commit is hitting all pr's after 418c7b1 direct merge. Clean it up
in separate commit/PR to keep it off future ones.

--- a/docs/platform/sso.mdx
+++ b/docs/platform/sso.mdx
@@ -52,9 +52,9 @@ members with a `@your-domain.com` email address,
 
 ### Logging Into the App
 
-To log in with SSO, click on the **Log in with SAML SSO**
-link, and you'll be prompted to enter your email address. Make sure to enter the
-email address provided by your organization.
+To log in with SSO, click on the **Log in with SAML SSO** link, and you'll be
+prompted to enter your email address. Make sure to enter the email address
+provided by your organization.
 
 <p align="center">
   <img
